--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.springsource.cloudfoundry.mvc</groupId>
-	<artifactId>web</artifactId>
-	<name>A Spring / Cloud Foundry Template</name>
+	<name>A Spring / Cloud Foundry Demo</name>
 	<packaging>war</packaging>
 	<version>1.0.0</version>
 
@@ -180,4 +178,6 @@
 		</plugins>
 	</build>
 
+	<groupId>com.objectwing</groupId>
+	<artifactId>cfdemo</artifactId>
 </project>
