--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
       <param-name>contextInitializerClasses</param-name>
-      <param-value>com.objectwing.cfdemo.web.SpringApplicationContextInitializer</param-value>
+      <param-value>com.objectwing.cfdemo.web.config.SpringApplicationContextInitializer</param-value>
     </init-param>
     <init-param>
       <param-name>contextClass</param-name>
@@ -21,7 +21,7 @@
     </init-param>
     <init-param>
       <param-name>contextConfigLocation</param-name>
-      <param-value>com.objectwing.cfdemo.web.WebMvcConfiguration</param-value>
+      <param-value>com.objectwing.cfdemo.web.config.WebMvcConfiguration</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
